--- a/landing.html
+++ b/landing.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,7 +8,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
   <meta name="viewport" content="width=device-width, initial-scale=2, maximum-scale=1, user-scalable=no" />
   
- <script src="scripts.js" type="text/javascript"></script>
+ <script src="js/scripts.js" type="text/javascript"></script>
   
     <script>
     var _gaq = _gaq || [];
